# MoveMyth

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  README.md  STORY_SCHEMA.md  docker-compose.yml  package-lock.json
.stitch/: next-prompt.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  test_adapt.py  test_vision.py
backend/agents/lio/: __init__.py  agent.py  tools.py
backend/agents/pipeline/: adventure_seeker.py  guardian.py  orchestrator.py  storysmith.py
backend/config/: settings.py
backend/routes/: health.py  session.py  story.py  user.py  vision.py  ws_lio.py  ws_vision.py
backend/schemas/: session.py  story.py  websocket.py
backend/services/: story.py  stt.py  tts.py
backend/services/memory/: __init__.py  firestore_store.py  session_store.py
backend/services/vision/: __init__.py  verifier.py
backend/stories/: forest.json  ocean.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BadgeCelebration.tsx  BadgeModal.tsx  BouncingDots.tsx  DoneButton.tsx  LioBar.tsx  MagicCameraFrame.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/hooks/: useAudio.ts  (+3 more)
stitch_assets/: adventure_complete_raw.html  badge_raw.html  character_setup_raw.html  lio_demo_raw.html  magic_sign_raw.html  parent_dashboard_raw.html  parent_dashboard_refined_raw.html  story_launch_raw.html  storytelling_raw.html  storytelling_view_raw.html  verification_raw.html  voice_choice_raw.html  welcome_back_raw.html
(+27 files in other folders)
